package maidsafe.nfs.protobuf;
import "maidsafe/nfs/persona_id.proto";
option optimize_for = LITE_RUNTIME;

message GenericMessage {
  message Batch {
    required int32 size = 1;
    required int32 index = 2;
  }
  required bytes message_id = 1;
  optional Batch batch = 2;
  required int32 action = 3;
  required int32 destination_persona = 4;
  required PersonaId source = 5;
  required bytes name = 6;
  optional bytes content = 7;
}

// MAID Client send to MAID Account Holder
message PmidRegistration {
  message SignedDetails {
    message Details {
      required bytes maid_name = 1;
      required bytes pmid_name = 2;
      required bool unregister = 3;
    }
    required bytes serialised_details = 1;
    required bytes pmid_signature = 2;
  }
  required bytes serialised_signed_details = 1;
  required bytes maid_signature = 2;
}

// MPID Client to MPID Client (or MPID Account Holders)
message ConnectMessage {
  required int32 message_id = 1; // random int32
  optional int32 parent_id = 2;
}
