package maidsafe.nfs.protobuf;
option optimize_for = LITE_RUNTIME;

message PersonaId {
  required int32 persona = 1;
  required bytes node_id = 2;
}
